alterei o arquivo index.html e criei o arquivo sobre.html

--- a/public_html/sobre.html
+++ b/public_html/sobre.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>curso de github</title>
+	<title>Documents</title>
 </head>
 <body>
-	<h1>Robotica Pratica</h1>
+	
 </body>
 </html>
